--- a/index.html
+++ b/index.html
@@ -104,24 +104,14 @@
                 </a>
               </span>
               
-              <!-- Video Link. -->
-              <span class="link-block">
-                <a href="https://koopmotion.github.io"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="fab fa-youtube"></i>
-                  </span>
-                  <span>Video</span>
-                </a>
-              </span>
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://koopmotion.github.io"
+                <a href="https://github.com/alicekl/koopmotion"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
-                  <span>Code (Coming soon)</span>
+                  <span>Code</span>
                   </a>
               </span>
             </div>
